# just-a-table

./: README.md  package-lock.json  package.json  useSSM.ts
.github/workflows/: destroy.yml  feature-branch.yml  main.yml  oidc.yml
content/: deploy-content.sh
infra/: package-lock.json  package.json
infra/lib/: appTable.ts  schema.ts
itest/: itest.sh
js/: createMap1.js  package-lock.json  package.json  putItem1.js
lib/: index.ts
oidc/: README.md  account-check.sh  cdk.json  package-lock.json  package.json  say-var.sh  useRolename.ts
oidc/lib/: oidc-stack.ts
oidc/test/: oidc.test.ts
python/: pyproject.toml
rolename/: .gitignore  bin.ts  index.js  index.ts  jest.config.js  lib.test.ts  lib.ts  package-lock.json  package.json  rolename2.js  rolename3.js  rolename4.ts
rolename/itest/: itest.sh
scripts/: deploy-frontend.sh  itest.sh
